--- a/i18n/cn.yaml
+++ b/i18n/cn.yaml
@@ -65,7 +65,7 @@
   translation: 版权
 
 - id: my_name_is
-  translation: 我的名字
+  translation: Stars Press
 
 - id: enter_your_email
   translation: 输入你的 email
