--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -5,7 +5,7 @@
   translation: Our Instagram
 
 - id: name
-  translation: Your Name
+  translation: Stars Press
 
 - id: email
   translation: Email Address
@@ -65,7 +65,7 @@
   translation: Designed & Developed By
 
 - id: my_name_is
-  translation: My name is
+  translation: Stars Press
 
 - id: enter_your_email
   translation: Enter your email
