--- a/content/news/m-780407.md
+++ b/content/news/m-780407.md
@@ -18,7 +18,7 @@ title = "火星移民登记正式对公众开放"
 * 解除对殖民者的职业限制，欢迎各行业人士投入火星建设事业中。但IIA会优先受理来自殖民地建设相关组织及企业的工作人员的移民登记。
 
   
-此外，IIA还颁布了新的_《星际移民局火星移民登记条例》_。《条例》仍保留了此前限制返地、禁止生育等相关规定，但对其作出了少许修改。此外，《条例》还作出了关于移民登记、适应性训练、航线选择等相关规定。  
+此外，IIA还颁布了新的《星际移民局火星移民登记条例》。《条例》仍保留了此前限制返地、禁止生育等相关规定，但对其作出了少许修改。此外，《条例》还作出了关于移民登记、适应性训练、航线选择等相关规定。  
    
 这次对殖民者选拔规定的修改是自2062年招募火星殖民者以来第一次放宽招募火星移民的条件限制。据信，出于火星殖民地建设需要，IIA拟在未来进一步减少选拔移民的条件限制。  
    
