--- a/content/news/m-780407.md
+++ b/content/news/m-780407.md
@@ -22,4 +22,4 @@ title = "火星移民登记正式对公众开放"
    
 这次对殖民者选拔规定的修改是自2062年招募火星殖民者以来第一次放宽招募火星移民的条件限制。据信，出于火星殖民地建设需要，IIA拟在未来进一步减少选拔移民的条件限制。  
    
-这一举动究竟是会在未来掀起火星殖民的浪潮，还是会成为当下火星建设的桎梏？我们不妨将一切交由时间来评判。
+大批移民涌入究竟会在未来掀起火星殖民的浪潮，还是会成为当下火星建设的桎梏？我们不妨将一切交由时间来评判。
