--- a/content/news/m-780407.md
+++ b/content/news/m-780407.md
@@ -14,9 +14,9 @@ title = "火星移民登记正式对公众开放"
    
 据了解，IIA欲进一步减少对火星殖民者的条件限制。这些改动包括但不限于：
 
-* 放宽了殖民者的年龄要求：年满18周岁且不满55周岁的健康地球公民可向当地的IIA办事处提交移民申请。年满16周岁不满18周岁可随同监护人前往火星。需要注意的是，出于青少年的身心健康和新生儿的安全考虑，IIA暂不接受16周岁以下青少年的监护人、孕妇及其配偶的移民申请。
+1. 放宽了殖民者的年龄要求：年满18周岁且不满55周岁的健康地球公民可向当地的IIA办事处提交移民申请。年满16周岁不满18周岁可随同监护人前往火星。需要注意的是，出于青少年的身心健康和新生儿的安全考虑，IIA暂不接受16周岁以下青少年的监护人、孕妇及其配偶的移民申请。
 
-* 解除对殖民者的职业限制，欢迎各行业人士投入火星建设事业中。但IIA会优先受理来自殖民地建设相关组织及企业的工作人员的移民登记。
+2. 解除对殖民者的职业限制，欢迎各行业人士投入火星建设事业中。但IIA会优先受理来自殖民地建设相关组织及企业的工作人员的移民登记。
 
   
 此外，IIA还颁布了新的《星际移民局火星移民登记条例》。《条例》仍保留了此前限制返地、禁止生育等相关规定，但对其作出了少许修改。此外，《条例》还作出了关于移民登记、适应性训练、航线选择等相关规定。  
