--- a/content/news/m-780407.md
+++ b/content/news/m-780407.md
@@ -12,7 +12,7 @@ title = "火星移民登记正式对公众开放"
    
 当地时间4月7日晚，星际移民局驻地球办事处召开新闻发布会，宣布从5月1日起，向公众开放火星移民登记。  
    
-据了解，IIA欲进一步减少对火星殖民者的条件限制。这些改动包括但不限于：
+据了解，IIA欲进一步减少挑选火星殖民者的条件限制。这些改动包括但不限于：
 
 1. 放宽了殖民者的年龄要求：年满18周岁且不满55周岁的健康地球公民可向当地的IIA办事处提交移民申请。年满16周岁不满18周岁可随同监护人前往火星。需要注意的是，出于青少年的身心健康和新生儿的安全考虑，IIA暂不接受16周岁以下青少年的监护人、孕妇及其配偶的移民申请。
 
