--- a/content/news/Drafts/m-060311.md
+++ b/content/news/Drafts/m-060311.md
@@ -3,7 +3,7 @@ categories = [ "星辰通讯社" ]
 date = 2022-01-21T16:00:00.000Z
 description = ""
 images = [ ]
-tags = ["星际解密（InterplanetaryLeaks )", "南河城", ]
+tags = ["星际解密（InterplanetaryLeaks )", "南河城", "联合行星(UPI)"  ]
 title = "UPI贪污案今日于南河开庭审理，星际解密对此发表声明"
 +++
 **星辰社 &nbsp;南河城 &nbsp;2106 年3 月11 日（火星73 年6 月18 日） 电**
