--- a/content/news/Drafts/m-060311.md
+++ b/content/news/Drafts/m-060311.md
@@ -3,9 +3,9 @@ categories = [ "星辰通讯社" ]
 date = 2022-01-21T16:00:00.000Z
 description = ""
 images = [ ]
-tags = ["星际解密（InterplanetaryLeaks )", "南河城", "联合行星(UPI)"  ]
-title = "UPI贪污案今日于南河开庭审理，星际解密对此发表声明"
+tags = [ "星际解密（InterplanetaryLeaks )", "南河城", "联合行星(UPI)" ]
+title = "UPI 贪污行为遭曝出"
 +++
 **星辰社 &nbsp;南河城 &nbsp;2106 年3 月11 日（火星73 年6 月18 日） 电**
 
-联合行星（UPI）逃税案今日于南河城开庭审理。
+一篇来自星际解密（InterplanetaryLeaks, 下文简称IL）的加密文档爆料，联合行星（UPI ）及其前身联合小行星（UAI ）自成立以来，通过伪造合同、财务报表等方式非法占有来自各国政府及社会团体的拨款，金额高达百亿美元。
