Update and rename content/drafts/drafts/m-060311.md to content/drafts/m-060311.md

--- a/content/drafts/m-060311.md
+++ b/content/drafts/m-060311.md
@@ -4,7 +4,7 @@ date = 2022-01-21T16:00:00.000Z
 description = ""
 images = [ ]
 tags = [ "星际解密（InterplanetaryLeaks )", "南河城", "联合行星(UPI)" ]
-title = "UPI 贪污行为遭曝出"
+title = "UPI 贪污行为遭曝光"
 +++
 **星辰社 &nbsp;南河城 &nbsp;2106 年3 月11 日（火星73 年6 月18 日） 电**
 
