Updated 2 files via CloudCannon.

--- a/content/drafts/m-060311.md
+++ b/content/drafts/m-060311.md
@@ -1,6 +1,6 @@
 drafts/+++ categories = \[ "星辰通讯社" \] date = 2022-01-21T16:00:00.000Z description = "" images = \[ \] tags = \[ "星际解密（InterplanetaryLeaks )", &nbsp;"联合行星(UPI)" \] title = "星际解密曝光联合行星贪污行为" +++ **星辰社 &nbsp;2106 年3 月11 日（火星73 年6 月18 日） 电**
 
-一篇来自星际解密（InterplanetaryLeaks, 下文简称IL）的加密文档爆料，联合行星（UPI ）及其前身联合小行星（UAI ）自成立以来，通过伪造合同、财务报表等方式非法占有来自各国政府及社会团体的资助款，金额高达百亿美元。
+一篇来自<a rel="noopener" target="_blank" href="https://interimm.org/hub/companies/company-hvntbhoa8ntogoxjhvntb6n1yblb1izu/">...</a>星际解密（InterplanetaryLeaks, 下文简称IL）的加密文档爆料，联合行星（UPI ）及其前身联合小行星（UAI ）自成立以来，通过伪造合同、财务报表等方式非法占有来自各国政府及社会团体的资助款，金额高达百亿美元。
 
 据爆料，UAI 自2047 年成立以来，多次挪用各界的资助款以充实部分管理层成员的私囊。金额最大有7亿美元之多。IL 文档还透露，UPI 还以多个影子公司的名义进行大量犯罪活动，包括但不限于走私、偷渡、偷税等。这恐成为2057 年UAI 垄断事件以来联合行星又一大丑闻事件。
 
