--- a/content/news/m-620723.md
+++ b/content/news/m-620723.md
@@ -14,7 +14,7 @@ title = "联合国决定成立星际移民局"
    
 关于 IIA 的工作计划，联合国称：“星际移民局将在不久后着手实施火星移民计划。目前拟从各国各地区挑选符合条件的志愿者并送往火星，再进行进一步建设。根据实际情况，这一阶段将进行30-60年不等。火星殖民地的建立、建设和行政管理总体上将由星际移民局负责。”  
    
-根据联合国发表的声明， IIA 的运营经费将由各个成员国拨款，有但仅有少量来自于众太空商会。“我们不允许任何企业及个人以任何形式直接插手火星的殖民事务。”但值得注意的是，近年来联合行星 ( United Planet Institution, UPI ) 对星际移民事务愈发重视，且联合国各常任理事国对 UPI 的支持力度日益加强，很难保证 IIA 的工作不会受到 UPI 等商会的影响。  
+根据联合国发表的声明， IIA 的运营经费将由各个成员国拨款，有但仅有少量来自于众太空商会。“我们不允许任何个人或企业以任何形式直接插手火星的殖民事务。”但值得注意的是，近年来联合行星 ( United Planet Institution, UPI ) 对星际移民事务愈发重视，且联合国几大成员国对 UPI 的支持力度日益加强，很难保证 IIA 的工作不会受到 UPI 等商会的影响。  
    
 记者会上，联合国发言人表示：“在航天技术的迅猛发展和民众强烈的火星探索的要求的双重推动下，人类对太空的进一步探索已成当务之急。成立星际移民局，为的是适应当代社会发展的需要，为的是实现老一辈航天人的夙愿。为了现在，也是为了将来。”  
    
